[tool.poetry]
name = "pybitespodcast"
version = "0.1.0"
description = ""
authors = ["rickcran <crandallrd@comcast.net>"]

[tool.poetry.dependencies]
python = "^3.8"
feedparser = "^6.0.8"

[tool.poetry.dev-dependencies]
pytest = "^5.2"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
